fix dialog overflow in mobile screen sizes

--- a/frontend/src/components/dialogOrderConfirmed/dialogOrderConfirmed.module.css
+++ b/frontend/src/components/dialogOrderConfirmed/dialogOrderConfirmed.module.css
@@ -1,7 +1,52 @@
+
+dialog {
+  position: relative;
+  /* inset: 0;
+  t0 */
+  background-color: var(--clr-white);
+  /* min-width: 600px; */
+  top: 0;
+  margin: auto;
+
+  opacity: 0;
+  translate: 0 25vh;
+  transition-property: display opacity overlay;
+  transition-duration: 1s;
+  transition-behavior: allow-discrete;
+}
+
+dialog[open] {
+  display: block;
+  opacity: 1;
+  translate: 0 0;
+}
+
+dialog::backdrop {
+  transition-property: display opacity overlay;
+  transition-duration: 1s;
+  transition-behavior: allow-discrete;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+}
+
+dialog[open]::backdrop {
+  opacity: 0.75;
+}
+
+@starting-style {
+  dialog[open] {
+    opacity: 0;
+    translate: 0 -25vh;
+  }
+
+  dialog[open]::backdrop {
+    opacity: 0;
+  }
+}
+
 .dialog-order-confirmed {
   display: grid;
   gap: 0.75em;
-  padding: 2.5rem;
   border-width: 0px;
 
   translate: 0 0;
@@ -72,4 +117,11 @@ p {
   align-items: center;
   gap: 1em;
   justify-content: space-between;
+}
+
+
+@media (min-width: 700px) {
+  .dialog-order-confirmed {
+    padding: 2.5rem;
+  }
 }
