--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -112,50 +112,6 @@ body {
   background-color: var(--clr-rose-50);
 }
 
-dialog {
-  position: relative;
-  /* inset: 0;
-  t0 */
-  background-color: var(--clr-white);
-  min-width: 600px;
-  top: 0;
-  margin: auto;
-
-  opacity: 0;
-  translate: 0 25vh;
-  transition-property: display opacity overlay;
-  transition-duration: 1s;
-  transition-behavior: allow-discrete;
-}
-
-dialog[open] {
-  display: block;
-  opacity: 1;
-  translate: 0 0;
-}
-
-dialog::backdrop {
-  transition-property: display opacity overlay;
-  transition-duration: 1s;
-  transition-behavior: allow-discrete;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-}
-
-dialog[open]::backdrop {
-  opacity: 0.75;
-}
-
-@starting-style {
-  dialog[open] {
-    opacity: 0;
-    translate: 0 -25vh;
-  }
-
-  dialog[open]::backdrop {
-    opacity: 0;
-  }
-}
 
 p {
   margin: 0;
@@ -290,11 +246,16 @@ h2 {
 }
 
 .wrapper {
-  width: clamp(10rem, 90vw, 76rem);
   margin-left: auto;
   margin-right: auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+@media (min-width: 700px) {
+  .wrapper {
+    width: clamp(10rem, 90vw, 76rem);
+  }
 }
 
 /* Buttons */
